# Doxa

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONFIG_YAML_REFERENCE.md  CONTRIBUTING.md  LICENSE  PAPER.md  PROMPT.md  QUICKSTART.md  README.md  SIMULATOR_NOTES.md  docker-compose.yml  hormuz.yaml  index.html  mkdocs.yml  paper.tex  sitemap.xml
.github/: FUNDING.yml
api/: index.html
architecture/: index.html
changelog/: index.html
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
server/: .dockerignore  Dockerfile  README.md  agents.py  api.py  app.py  engine.py  justonefile.ps1  manager.py  models.py  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulation.py  start.py  test_load.py  test_parser.py  world2.yaml  world_config.yaml
server/doxa/: cli.py
server/engine/: DoxaChatbot.py  DoxaEngine.py  MacroTracker.py  SimulationEnvironment.py  __init__.py
server/engine/agents/: AgentEconomics.py  AgentState.py  DoxaAgent.py  __init__.py
server/engine/events/: WorldEventEffect.py  WorldEventScheduler.py  __init__.py
server/engine/market/: Market.py  MarketEngine.py  Order.py  __init__.py
server/engine/relations/: RelationGraph.py  RelationRecord.py  __init__.py
server/engine/utils/: ConsoleLogger.py  __init__.py
server/src/doxa/: __init__.py  cli.py
server/tests/: conftest.py  test_agent_economics.py  test_api.py  test_engine_smoke.py  test_macro_tracker.py  test_market_engine.py  test_relation_graph.py  test_scenarios.py  test_world_events.py
(+59 files in other folders)
