[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxa"
version = "0.1.0"
description = "Doxa backend engine and CLI"
authors = [
    { name = "Tuo Nome", email = "tuo@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click"
]

[project.scripts]
doxa = "doxa.cli:main"
