[tool.setuptools.packages.find]
where = ["src", "."]
include = ["doxa", "doxa.*", "engine", "engine.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxa-ai"
version = "0.5.0"
description = "Doxa backend engine and CLI"
authors = [
    { name = "VincenzoManto" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "attrs>=23.2.0",
    "autogen-core>=0.4.8",
    "autogen-ext[chromadb]>=0.4.8",
    "chromadb>=0.5.5",
    "httpx>=0.27.0",
    "autogen-agentchat~=0.2",
    "ag2[openai]",
    "autogen",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2"
]

[project.scripts]
doxa = "doxa.cli:main"
